--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "flowbite": "^1.8.1",
     "popper.js": "^1.16.1",
-    "preline": "^1.9.0"
+    "preline": "^1.9.0",
+    "tw-elements": "^1.0.0"
   }
 }
