--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vercel/blob": "^0.15.1",
     "axios": "^1.6.2",
+    "firebase": "^10.7.0",
     "flowbite": "^2.1.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
