--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@vercel/blob": "^0.15.1",
     "axios": "^1.6.2",
     "firebase": "^10.7.0",
+    "flatpickr": "^4.6.13",
     "flowbite": "^2.1.1",
+    "flowbite-datepicker": "^1.2.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
